[package]
name = "qmstats"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
wmi = "0.11.3"

[profile.release]
opt-level = '3'     # Optimize for size.
panic = 'abort'     # Abort on panic
