[package]
name = "qmstats"
version = "0.5.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
nvml-wrapper = "0.9.0"
winapi = { version = "*", features = ["psapi","handleapi","processthreadsapi"] }
wmi = "0.13.1"

[profile.release]
opt-level = 3     # Optimize for size.
panic = 'abort'     # Abort on panic
